# Near-state-proofs

./: .gitignore  Cargo.toml  README.md
contracts/: Cargo.toml
contracts/mock-token/: Cargo.toml
contracts/mock-token/src/: lib.rs
contracts/vault-contract/: Cargo.toml
contracts/vault-contract/src/: deposit.rs  ft.rs  lib.rs  utils.rs  view.rs
contracts/vault-contract/tests/workspace/deposit/: mod.rs  test_deposit.rs  utils.rs
script/: Cargo.toml  config.json  key_value_with_proofs.txt  result_with_proofs.txt
script/src/: main.rs  proof_verifier.rs  utils.rs
src/: main.rs  proof_verifier.rs  raw_node.rs  utils.rs
vault-contract/: Cargo.toml  deploy.sh
vault-contract/src/: lib.rs
